fixed scroll on mobile 2

--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -246,7 +246,7 @@
     }
 
     .about-description {
-        min-height: 200px;
+        min-height: 175vh;
         overflow-y: visible;
     }
 }
